--- a/client/templates/admin/admin.html
+++ b/client/templates/admin/admin.html
@@ -1,4 +1,5 @@
 <template name="admin">
+    {{> categoryAdmin}}
     <div class="col-sm-6">
         <h2 class="heading">Product Administration</h2>
         <div class="form-group">
@@ -7,7 +8,11 @@
         </div>
         <div class="form-group">
             <label class="control-label">Category</label>
-            <input id="category" class="form-control input-sm">
+            <select name="category" id="category" class="form-control">
+                {{# each categories}}
+                    <option value="{{name}}">{{name}}</option>
+                {{/each}}
+            </select>
         </div>
         <div class="form-group">
             <label class="control-label">Description</label>
