install collection hooks and helpers add product methods and permissions edit category and profile sub to product in routes category and product collection helpers and hooks

--- a/client/templates/profile/profile.html
+++ b/client/templates/profile/profile.html
@@ -1,6 +1,6 @@
 <template name="profile">
     <div class="col-md-6">
-        <h2 class="head-snippet"></h2>
+        <h2 class="head-snippet">User Profile</h2>
 
         <form>
             <div class="form-group">
