--- a/client/templates/category/category.html
+++ b/client/templates/category/category.html
@@ -11,10 +11,9 @@
             <div class="control-group">
                 <label class="control-label"></label>
                 <div class="controls">
-                    <button class="btn btn-info btn-md">
-                        <i class="fa fa-database addCategory">
-                            Add Category
-                        </i>
+                    <button class="btn btn-info btn-md addCategory">
+                        <i class="fa fa-database"></i>
+                        Add Category
                     </button>
                 </div>
             </div>
