--- a/client/templates/cart/cart.html
+++ b/client/templates/cart/cart.html
@@ -1,3 +1,38 @@
 <template name="cart">
-    Cart
+    {{#if currentUser}}
+        <h4>My Cart</h4>
+        <ul class="list-unstyled col-lg-8">
+            {{#each cartitems}}
+            <li>
+                <span class="item">
+                    <span class="item-left">
+                        <img src="{{img}}" alt="Image">
+                        <span class="item-info">
+                            <span>
+                                <label class="badge alert-success">{{quantity}}</label>
+                            </span>
+                            <span>{{truncate cartproduct.name 9}}</span>
+                            <p>{{{cartproduct.description}}}</p>
+                        </span>
+                    </span>
+                    <span class="item-right">
+                        <h4>
+                            {{currency cartproduct.price}} &nbsp;
+                            <button class="btn btn-xs btn-danger pull-right delFromCart">x</button>
+                        </h4>
+                    </span>
+                </span>
+            </li>
+            {{/each}}
+        </ul>
+    {{else}}
+        Please Log In...
+    {{/if}}
+    {{#if itemsInCart}}
+        <div class="col-md-12">
+            <span>
+                <button class="btn btn-md checkOutBtn">Checkout</button>
+            </span>
+        </div>
+    {{/if}}
 </template>
