--- a/client/templates/category/category.html
+++ b/client/templates/category/category.html
@@ -1,11 +1,13 @@
 <template name="category">
-    <div class="page-header">
-        <h1>{{categoryName}}</h1>
-        {{#each products}}
-            {{> product}}
-        {{/each}}
-    </div>
+    {{#if isCheckingOut}}
+        {{> checkout}}
+    {{/if}}
+    <h1>{{categoryName}}</h1>
+    {{#each products}}
+        {{> product}}
+    {{/each}}
 </template>
+
 <template name="categoryAdmin">
     <div class="col-md-12">
         <div class="col md-6 form-group">
