--- a/client/templates/layout/layout.html
+++ b/client/templates/layout/layout.html
@@ -5,11 +5,13 @@
             <div class="col-md-2">
                 {{>Template.dynamic template=sidebar}}
             </div>
-            <div class="col-md-8">
+            <div class="col-md-7">
                 {{>Template.dynamic template=main}}
             </div>
-            <div class="col-md-2">
-                {{>Template.dynamic template=cart}}
+            <div class="col-md-3">
+                {{#if currentUser}}
+                    {{>Template.dynamic template=cart}}
+                {{/if}}
             </div>
         </div>
     </div>
