fix image not showing up

--- a/client/templates/cart/cart.html
+++ b/client/templates/cart/cart.html
@@ -6,7 +6,7 @@
             <li>
                 <span class="item">
                     <span class="item-left">
-                        <img src="{{img}}" alt="Image">
+                        <img src="{{image}}" alt="Image">
                         <span class="item-info">
                             <span>
                                 <label class="badge alert-success">{{quantity}}</label>
