fix rating not showing

--- a/client/templates/cart/cart.html
+++ b/client/templates/cart/cart.html
@@ -9,7 +9,7 @@
                         <img src="{{image}}" alt="Image">
                         <span class="item-info">
                             <span>
-                                <label class="badge alert-success">{{quantity}}</label>
+                                <label class="badge alert-info">{{quantity}}</label>
                             </span>
                             <span>{{truncate cartproduct.name 9}}</span>
                             <p>{{{cartproduct.description}}}</p>
