--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-    <nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a href="/" class="navbar-brand">Quiet Earth</a>
@@ -8,12 +8,12 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="/">Home</a></li>
                     {{#if isInRole 'admin'}}
-                    <li><a href="/admin">Admin</a></li>
+                        <li><a href="/admin">Admin</a></li>
                     {{/if}}
                     {{#if currentUser}}
-                    <li><a href="/profile">My Profile</a></li>
+                        <li><a href="/profile">My Profile</a></li>
+                        <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                     {{/if}}
-                    <li><a href="/cart"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                 </ul>
                 {{#if currentUser}}
                     <div class="navbar-right plain">
