--- a/client/templates/category/category.html
+++ b/client/templates/category/category.html
@@ -10,7 +10,7 @@
 
 <template name="categoryAdmin">
     <div class="col-md-12">
-        <div class="col md-6 form-group">
+        <div class="col-md-6 form-group">
             <label class="control-label">Category Name</label>
             <input id="categoryName" class="form-control input-sm">
             <div class="control-group">
