--- a/client/templates/admin/unauthorised.html
+++ b/client/templates/admin/unauthorised.html
@@ -1,4 +1,4 @@
 <template name="unauthorised">
     <h1>Unauthorised</h1>
-    <a href="/home">Back to Home</a>
+    <a href="/">Back to Home</a>
 </template>
